fixes issue where logout on mobile redirected to the website landing page

--- a/src/stories/CrButtonGroup.css
+++ b/src/stories/CrButtonGroup.css
@@ -57,6 +57,10 @@
   align-items: center;
 }
 
+.cr-button-group.cr-button-group--horizontal.cr-button-group {
+  gap: var(--cr-space-6);
+}
+
 .cr-button-group__option {
   transition: all 0.15s ease;
 }
